--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Firebase Admin service account keys (do NOT commit)
+scripts/serviceAccountKey.json
+*.serviceAccountKey.json
+*-firebase-adminsdk-*.json
