--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "firebase": "^12.1.0",
+    "firebase-admin": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
@@ -25,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "rename": "node scripts/renameCollection.js"
   },
   "eslintConfig": {
     "extends": [
